# msckf_mono

./: .gitignore  README.md
src/msckf/: CMakeLists.txt  README.md  nodelets.xml  package.xml
src/msckf/include/msckf/: EKF.hpp  estimation.hpp  feature_tracking_nodelet.hpp  msckf_nodelet.hpp  types.hpp  util.hpp
src/msckf/launch/: feature_tracker.launch  msckf.launch  msckf_comparison.launch
src/msckf/msg/: Feature.msg  ImageFeatures.msg
src/msckf/scripts/: plot_pose.py  plot_sim_output.py
src/msckf/src/msckf/: EKF.cpp  estimation.cpp  feature_tracking_node.cpp  feature_tracking_nodelet.cpp  msckf_node.cpp  msckf_nodelet.cpp
src/msckf/src/test/: test_ekf.cpp  test_estimation.cpp  test_helpers.hpp  test_main.cpp  test_sim.cpp  test_util.cpp  virtual_camera.hpp  virtual_drive.hpp
src/msckf/test_mine/: CMakeLists.txt
src/msckf/test_mine/src/: eigen_test.cpp
src/msckf_mine/: CMakeLists.txt
src/msckf_mine/config/: config.yaml
src/msckf_mine/include/: ORBextractor.h  ORBmatcher.h  camera.h  common_include.h  converter.h  frame.h  msckf.h  types.h
src/msckf_mine/src/: ORBextractor.cc  ORBmatcher.cc  camera.cc  converter.cc  data_reader.cc  frame.cc  msckf.cc  msckf.cc.autosave
src/msckf_mine/test/: asl_dataset_to_mars.cpp  eigen_function_test.cpp  frame_and_orb_test.cpp  msckf_construct_test.cpp  orb_feature_extract.cpp  read_csv_file.cpp
src/msckf_mine/test/optical_flow_test/: optical_flow_tracking.cpp  optical_flow_tracking_mask.cpp
src/msckf_mine/useful_python_scripts/: README.md
src/msckf_mine_1.0/: CMakeLists.txt  README.md
src/msckf_mine_1.0/config/: config.yaml
src/msckf_mine_1.0/include/: frame.h  msckf.h
src/msckf_mine_1.0/src/: data_reader.cc  frame.cc  msckf.cc
src/msckf_mine_1.0/test/frame_test/: frame_test.cpp  frame_with_imu_test.cpp
src/msckf_mine_1.0/test/optical_flow_test/: tracking_feature_manager.cpp
src/msckf_mine_1.5/include/: image_processor.h
src/msckf_mine_1.5/src/: image_processor.cc
src/msckf_mono/: CMakeLists.txt  README.md  nodelets.xml  package.xml
src/msckf_mono/Proj/ws_msckf_mono/: ws_msckf_mono.pro
src/msckf_mono/config/: camchain-imucam-loitor.yaml
src/msckf_mono/include/msckf_mono/: cam_state.h  feature.hpp  image_processor.h  image_processor_nodelet.h  imu_state.h  math_utils.hpp  msckf_mono.h  msckf_mono_nodelet.h  utils.h
src/msckf_mono/launch/: image_processor_euroc.launch  image_processor_loitor.launch  msckf_vio_euroc.launch  msckf_vio_loitor.launch
src/msckf_mono/msg/: FeatureMeasurement.msg
src/msckf_mono/rviz/: euroc_vio.rviz  euroc_vio_default.rviz  image_processor.rviz
src/msckf_mono/src/: image_processor.cpp  image_processor_nodelet.cpp  msckf_mono.cpp  msckf_mono_nodelet.cpp  utils.cpp
src/test/: CMakeLists.txt  package.xml
