<?xml version="1.0"?>
<package format="2">
    <name>msckf</name>
    <version>0.0.1</version>
    <description>MSCKF</description>
    <maintainer email="lkoppel@uwaterloo.ca">Leo Koppel</maintainer>
    <license>TODO</license>
    <author>lkoppel@uwaterloo.ca</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>message_generation</build_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>nodelet</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>

    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
